// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action user #me should respond with an admin profile when authenticated 1`] = `
Object {
  "createdAt": "skipped",
  "deletedAt": null,
  "email": "admin@bspb.org",
  "firstName": "Admin",
  "id": 2,
  "imported": false,
  "language": "bg",
  "lastLoginAt": "skipped",
  "lastName": "Admin",
  "role": "admin",
  "updatedAt": "skipped",
  "username": "admin",
}
`;

exports[`action user #me should respond with an user profile when authenticated 1`] = `
Object {
  "createdAt": "skipped",
  "deletedAt": null,
  "email": "user@bspb.org",
  "firstName": "User",
  "id": 1,
  "imported": false,
  "language": "bg",
  "lastLoginAt": "skipped",
  "lastName": "User",
  "role": "user",
  "updatedAt": "skipped",
  "username": "user",
}
`;
